--- a/VP/3d1.html
+++ b/VP/3d1.html
@@ -5,6 +5,10 @@
 	<meta charset="utf-8" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.slim.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/screenfull.js/3.0.2/screenfull.js" type="text/javascript"></script>
+
+    
+
     <script type="text/javascript">
 
         $(document).ready(function () {
