--- a/VP/V2/_index.html
+++ b/VP/V2/_index.html
@@ -9,6 +9,9 @@
     </style>
 </head>
 <body id="body">
+    <div id="full">
+<!--##goldenBackground##-->
+    </div>
     <div id="center">
 <!--##goldenBoard##-->
     </div>
