--- a/VP/V2/index.html
+++ b/VP/V2/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <title></title>
@@ -9,69 +9,75 @@
     </style>
 </head>
 <body id="body">
+    <div id="full">
+        <svg id="goldenBackground" width="100%" height="100%" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
+          <defs id="rootDefs">
+            <g name="0 background image defs">
+              <linearGradient id="backgroundGradient" x1="0" y1="100%" x2="0" y2="0" gradientUnits="userSpaceOnUse">
+                <stop offset="0" stop-color="#000000" />
+                <stop offset="1" stop-color="#852029" />
+              </linearGradient>
+            </g>
+            <g name="1 background text image defs">
+              <g id="backgroundImageTextBitHit">
+                <path id="b" fill="#5c1f24" stroke="#7d1f26" stroke-opacity=".5" stroke-width="1.986" d="M17.93 1035.79c.618 2.337.74 4.52.36 6.55-.426 2.326-1.763 4.193-4.01 5.6-.17.107-.418.254-.742.443l-.727.455c-2.52 1.578-4.04 2.42-4.57 2.53-.22.048-.37-.087-.45-.405-.36-1.36-.86-3.444-1.51-6.252-.64-2.81-1.14-4.9-1.51-6.27-.39-1.47-1.16-4.22-2.32-8.23-.29-1.03-.74-2.57-1.35-4.62l-.08-.26c-.07-.23 0-.45.2-.63.21-.19 1-.71 2.36-1.56 2.18-1.36 3.46-2.15 3.83-2.35 1.71-.94 3.09-1.21 4.13-.8 1.38.55 2.45 2.26 3.21 5.13.2.75.29 1.62.27 2.61-.02.71-.09 1.45-.22 2.23-.04.47-.05.55.12 1.08.61.21 1.27.92 1.84 1.86.51.84.91 1.82 1.21 2.93zm-7.25-7.974c-.288-1.093-.774-1.633-1.455-1.62-.378.014-.943.256-1.694.727-.73.46-1.07.794-1.02.997.07.242.15.62.25 1.13.11.497.2.866.26 1.107.34 1.27.59 1.946.74 2.026.11.067.56-.147 1.35-.643 1.47-.92 2-2.16 1.58-3.724zm3.13 10.462c-.302-1.143-.763-1.758-1.383-1.844-.395-.05-.96.158-1.7.62-.88.55-1.34.914-1.382 1.088-.045.162.123.96.503 2.396.397 1.5.662 2.304.794 2.414.13.096.642-.135 1.536-.695.738-.462 1.228-.895 1.47-1.3.402-.68.456-1.573.163-2.68zm5.606-20.31q.725 3.07-1.285 4.33-.86.54-1.6.115-.81-.462-1.15-1.91-.32-1.377.11-2.658.4-1.18 1.22-1.692.8-.5 1.58-.037.84.49 1.16 1.85zm2.827 13.284q.304 1.29.94 3.83.63 2.523.93 3.795.086.37-.154.602-.33.32-1.55 1.08-1.23.77-1.61.88-.25.07-.33-.06-.04-.06-.15-.52-.29-1.22-.83-3.68-.55-2.48-.84-3.71-1.18-5.02-2.11-7.84-.09-.27-.11-.36-.09-.36.19-.53.28-.18.89-.44.62-.27.92-.46.29-.19.87-.65.57-.46.87-.65.24-.16.33.2l.06.34q.58 3.58 1.65 8.12zm9.54-2.61q.125.53.297 1.658.182 1.122.302 1.634.117.495.09.674-.03.18-.244.618-1.027 2.082-2.637 3.09-2.96 1.856-3.88-2.046-.27-1.165-.77-3.528-.5-2.38-.77-3.546-.18-.777-.7-.45l-.13.084q-.09.076-.13.1-.39.245-.5-.23-.07-.284-.18-.88-.11-.6-.17-.884-.08-.37-.29-1.11-.2-.747-.28-1.118-.08-.353.57-.8.37-.248.32-.603-.09-.71-.46-2.144-.57-2.25-.55-2.14-.48-2.05-.25-2.19.28-.17.84-.28.64-.13.87-.24.56-.2 1.66-.65.27-.12.33.14.17.71.43 2.18.28 1.47.45 2.2.2.87.5.68.36-.22 1.076-.73.72-.51 1.09-.74.23-.14.29.13.1.41.24 1.25.14.85.23 1.25.1.43.305 1.23.2.81.3 1.23.084.37-.21.56-.21.13-.69.41-.495.27-.7.4l-.77.49q-.152.1.03.88l.297 1.25q.21.84.31 1.25.35 1.49.68 1.93.46.59 1.27.08.26-.16.686-.65.43-.51.63-.63.22-.13.31.25zm16.932-3.222q.106.4.04.553-.026.083-.262.275-.595.506-1.732 1.218-1.6 1.007-1.92 1.072-.3.06-.41-.34-.4-1.507-1.12-4.563-.72-3.082-1.12-4.588-.19-.743-.45-.716-.39.07-2.52 1.4-2.14 1.35-2.46 1.72-.2.24 0 1 .4 1.49 1.23 4.43.84 2.92 1.23 4.41.15.57-.1.84-.29.32-1.89 1.32-1.38.87-1.79.99-.32.09-.45-.4-.54-2.06-1.54-6.28-.98-4.22-1.54-6.3-.58-2.21-1.85-6.57-1.28-4.37-1.87-6.58-.11-.42.11-.55.32-.2.97-.54.66-.34.98-.54.33-.2.97-.67.65-.47.98-.68.18-.11.27.24.38 1.43 1.03 4.36.64 2.91 1.02 4.34.18.67.4.66.31-.02 2.66-1.49 2.19-1.37 2.5-1.74.22-.27.04-.93-.36-1.37-1.17-4.09-.81-2.74-1.18-4.13-.15-.59.1-.75.3-.19.92-.51.63-.33.938-.52.3-.19.89-.62.6-.44.904-.63.295-.183.416.27.58 2.197 1.65 6.68 1.08 4.48 1.664 6.69.55 2.08 1.754 6.17 1.21 4.086 1.76 6.14zm.185-25.678q.71 3.048-1.3 4.307-.86.53-1.604.12-.81-.46-1.145-1.89-.31-1.37.12-2.65.4-1.17 1.22-1.69.8-.5 1.58-.05.83.48 1.15 1.83zm2.762 13.182q.298 1.278.92 3.8.617 2.502.91 3.763.086.368-.154.6-.325.322-1.545 1.086-1.23.77-1.603.884-.242.07-.33-.054-.036-.058-.143-.513-.28-1.208-.813-3.645-.535-2.454-.82-3.68-1.158-4.975-2.068-7.776-.086-.27-.106-.36-.08-.35.195-.53.288-.18.896-.44.62-.27.92-.46.3-.19.87-.65.58-.46.88-.65.25-.16.33.19.02.07.06.34.57 3.56 1.62 8.06zm9.526-2.634q.122.525.29 1.645.175 1.114.294 1.622.114.49.085.67-.03.177-.245.613-1.033 2.072-2.643 3.08-2.97 1.856-3.87-2.015-.27-1.156-.76-3.5-.49-2.362-.76-3.518-.18-.77-.71-.443l-.14.083q-.09.076-.13.1-.39.245-.5-.227-.07-.28-.18-.872-.11-.597-.17-.877-.09-.36-.29-1.1-.2-.74-.29-1.11-.08-.35.57-.79.36-.25.32-.6-.1-.7-.45-2.13l-.54-2.13q-.48-2.03-.25-2.17.27-.17.84-.28.63-.13.87-.24.55-.2 1.65-.65.26-.12.32.14.16.7.42 2.17.27 1.46.44 2.18.2.86.49.67.36-.22 1.07-.73.72-.51 1.082-.74.223-.14.284.12.096.41.23 1.24.14.84.23 1.24.1.42.297 1.22.194.8.292 1.22.09.37-.21.56-.204.13-.69.41-.49.27-.7.4l-.77.48q-.15.1.03.87l.29 1.24q.21.84.3 1.24.34 1.47.67 1.91.45.58 1.265.07.256-.16.683-.65.43-.51.625-.63.214-.13.304.25z" />
+              </g>
+            </g>
+          </defs>
+          <g id="rootGroup">
+            <g name="0 background image">
+              <rect fill="url(#backgroundGradient)" x="0" y="0" width="100%" height="100%"></rect>
+            </g>
+            <g name="1 background text image">
+              <use x="22.5" y="-971.672" xlink:href="#b" />
+              <use x="22.5" y="-871.672" xlink:href="#b" />
+              <use x="22.5" y="-771.672" xlink:href="#b" />
+              <use x="22.5" y="-671.672" xlink:href="#b" />
+              <use x="22.5" y="-571.672" xlink:href="#b" />
+              <use x="122.5" y="-971.672" xlink:href="#b" />
+              <use x="122.5" y="-871.672" xlink:href="#b" />
+              <use x="122.5" y="-771.672" xlink:href="#b" />
+              <use x="122.5" y="-671.672" xlink:href="#b" />
+              <use x="122.5" y="-571.672" xlink:href="#b" />
+              <use x="222.5" y="-971.672" xlink:href="#b" />
+              <use x="222.5" y="-871.672" xlink:href="#b" />
+              <use x="222.5" y="-771.672" xlink:href="#b" />
+              <use x="222.5" y="-671.672" xlink:href="#b" />
+              <use x="222.5" y="-571.672" xlink:href="#b" />
+              <use x="322.5" y="-971.672" xlink:href="#b" />
+              <use x="322.5" y="-871.672" xlink:href="#b" />
+              <use x="322.5" y="-771.672" xlink:href="#b" />
+              <use x="322.5" y="-671.672" xlink:href="#b" />
+              <use x="322.5" y="-571.672" xlink:href="#b" />
+              <use x="422.5" y="-971.672" xlink:href="#b" />
+              <use x="422.5" y="-871.672" xlink:href="#b" />
+              <use x="422.5" y="-771.672" xlink:href="#b" />
+              <use x="422.5" y="-671.672" xlink:href="#b" />
+              <use x="422.5" y="-571.672" xlink:href="#b" />
+              <use x="522.5" y="-971.672" xlink:href="#b" />
+              <use x="522.5" y="-871.672" xlink:href="#b" />
+              <use x="522.5" y="-771.672" xlink:href="#b" />
+              <use x="522.5" y="-671.672" xlink:href="#b" />
+              <use x="522.5" y="-571.672" xlink:href="#b" />
+              <use x="622.5" y="-971.672" xlink:href="#b" />
+              <use x="622.5" y="-871.672" xlink:href="#b" />
+              <use x="622.5" y="-771.672" xlink:href="#b" />
+              <use x="622.5" y="-671.672" xlink:href="#b" />
+              <use x="622.5" y="-571.672" xlink:href="#b" />
+              <use x="722.5" y="-971.672" xlink:href="#b" />
+              <use x="722.5" y="-871.672" xlink:href="#b" />
+              <use x="722.5" y="-771.672" xlink:href="#b" />
+              <use x="722.5" y="-671.672" xlink:href="#b" />
+              <use x="722.5" y="-571.672" xlink:href="#b" />
+            </g>
+          </g>
+        </svg>
+    </div>
     <div id="center">
-<svg id="goldenBoard" width="100%" height="100%" viewBox="0 0 805 500" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
-  <defs id="rootDefs">
-    <g name="0 background image defs">
-      <linearGradient id="backgroundGradient" x1="0" y1="500" x2="0" y2="0" gradientUnits="userSpaceOnUse">
-        <stop offset="0" stop-color="#000000" />
-        <stop offset="1" stop-color="#852029" />
-      </linearGradient>
-    </g>
-    <g name="1 background text image defs">
-      <g id="backgroundImageTextBitHit">
-        <path id="b" fill="#5c1f24" stroke="#7d1f26" stroke-opacity=".5" stroke-width="1.986" d="M17.93 1035.79c.618 2.337.74 4.52.36 6.55-.426 2.326-1.763 4.193-4.01 5.6-.17.107-.418.254-.742.443l-.727.455c-2.52 1.578-4.04 2.42-4.57 2.53-.22.048-.37-.087-.45-.405-.36-1.36-.86-3.444-1.51-6.252-.64-2.81-1.14-4.9-1.51-6.27-.39-1.47-1.16-4.22-2.32-8.23-.29-1.03-.74-2.57-1.35-4.62l-.08-.26c-.07-.23 0-.45.2-.63.21-.19 1-.71 2.36-1.56 2.18-1.36 3.46-2.15 3.83-2.35 1.71-.94 3.09-1.21 4.13-.8 1.38.55 2.45 2.26 3.21 5.13.2.75.29 1.62.27 2.61-.02.71-.09 1.45-.22 2.23-.04.47-.05.55.12 1.08.61.21 1.27.92 1.84 1.86.51.84.91 1.82 1.21 2.93zm-7.25-7.974c-.288-1.093-.774-1.633-1.455-1.62-.378.014-.943.256-1.694.727-.73.46-1.07.794-1.02.997.07.242.15.62.25 1.13.11.497.2.866.26 1.107.34 1.27.59 1.946.74 2.026.11.067.56-.147 1.35-.643 1.47-.92 2-2.16 1.58-3.724zm3.13 10.462c-.302-1.143-.763-1.758-1.383-1.844-.395-.05-.96.158-1.7.62-.88.55-1.34.914-1.382 1.088-.045.162.123.96.503 2.396.397 1.5.662 2.304.794 2.414.13.096.642-.135 1.536-.695.738-.462 1.228-.895 1.47-1.3.402-.68.456-1.573.163-2.68zm5.606-20.31q.725 3.07-1.285 4.33-.86.54-1.6.115-.81-.462-1.15-1.91-.32-1.377.11-2.658.4-1.18 1.22-1.692.8-.5 1.58-.037.84.49 1.16 1.85zm2.827 13.284q.304 1.29.94 3.83.63 2.523.93 3.795.086.37-.154.602-.33.32-1.55 1.08-1.23.77-1.61.88-.25.07-.33-.06-.04-.06-.15-.52-.29-1.22-.83-3.68-.55-2.48-.84-3.71-1.18-5.02-2.11-7.84-.09-.27-.11-.36-.09-.36.19-.53.28-.18.89-.44.62-.27.92-.46.29-.19.87-.65.57-.46.87-.65.24-.16.33.2l.06.34q.58 3.58 1.65 8.12zm9.54-2.61q.125.53.297 1.658.182 1.122.302 1.634.117.495.09.674-.03.18-.244.618-1.027 2.082-2.637 3.09-2.96 1.856-3.88-2.046-.27-1.165-.77-3.528-.5-2.38-.77-3.546-.18-.777-.7-.45l-.13.084q-.09.076-.13.1-.39.245-.5-.23-.07-.284-.18-.88-.11-.6-.17-.884-.08-.37-.29-1.11-.2-.747-.28-1.118-.08-.353.57-.8.37-.248.32-.603-.09-.71-.46-2.144-.57-2.25-.55-2.14-.48-2.05-.25-2.19.28-.17.84-.28.64-.13.87-.24.56-.2 1.66-.65.27-.12.33.14.17.71.43 2.18.28 1.47.45 2.2.2.87.5.68.36-.22 1.076-.73.72-.51 1.09-.74.23-.14.29.13.1.41.24 1.25.14.85.23 1.25.1.43.305 1.23.2.81.3 1.23.084.37-.21.56-.21.13-.69.41-.495.27-.7.4l-.77.49q-.152.1.03.88l.297 1.25q.21.84.31 1.25.35 1.49.68 1.93.46.59 1.27.08.26-.16.686-.65.43-.51.63-.63.22-.13.31.25zm16.932-3.222q.106.4.04.553-.026.083-.262.275-.595.506-1.732 1.218-1.6 1.007-1.92 1.072-.3.06-.41-.34-.4-1.507-1.12-4.563-.72-3.082-1.12-4.588-.19-.743-.45-.716-.39.07-2.52 1.4-2.14 1.35-2.46 1.72-.2.24 0 1 .4 1.49 1.23 4.43.84 2.92 1.23 4.41.15.57-.1.84-.29.32-1.89 1.32-1.38.87-1.79.99-.32.09-.45-.4-.54-2.06-1.54-6.28-.98-4.22-1.54-6.3-.58-2.21-1.85-6.57-1.28-4.37-1.87-6.58-.11-.42.11-.55.32-.2.97-.54.66-.34.98-.54.33-.2.97-.67.65-.47.98-.68.18-.11.27.24.38 1.43 1.03 4.36.64 2.91 1.02 4.34.18.67.4.66.31-.02 2.66-1.49 2.19-1.37 2.5-1.74.22-.27.04-.93-.36-1.37-1.17-4.09-.81-2.74-1.18-4.13-.15-.59.1-.75.3-.19.92-.51.63-.33.938-.52.3-.19.89-.62.6-.44.904-.63.295-.183.416.27.58 2.197 1.65 6.68 1.08 4.48 1.664 6.69.55 2.08 1.754 6.17 1.21 4.086 1.76 6.14zm.185-25.678q.71 3.048-1.3 4.307-.86.53-1.604.12-.81-.46-1.145-1.89-.31-1.37.12-2.65.4-1.17 1.22-1.69.8-.5 1.58-.05.83.48 1.15 1.83zm2.762 13.182q.298 1.278.92 3.8.617 2.502.91 3.763.086.368-.154.6-.325.322-1.545 1.086-1.23.77-1.603.884-.242.07-.33-.054-.036-.058-.143-.513-.28-1.208-.813-3.645-.535-2.454-.82-3.68-1.158-4.975-2.068-7.776-.086-.27-.106-.36-.08-.35.195-.53.288-.18.896-.44.62-.27.92-.46.3-.19.87-.65.58-.46.88-.65.25-.16.33.19.02.07.06.34.57 3.56 1.62 8.06zm9.526-2.634q.122.525.29 1.645.175 1.114.294 1.622.114.49.085.67-.03.177-.245.613-1.033 2.072-2.643 3.08-2.97 1.856-3.87-2.015-.27-1.156-.76-3.5-.49-2.362-.76-3.518-.18-.77-.71-.443l-.14.083q-.09.076-.13.1-.39.245-.5-.227-.07-.28-.18-.872-.11-.597-.17-.877-.09-.36-.29-1.1-.2-.74-.29-1.11-.08-.35.57-.79.36-.25.32-.6-.1-.7-.45-2.13l-.54-2.13q-.48-2.03-.25-2.17.27-.17.84-.28.63-.13.87-.24.55-.2 1.65-.65.26-.12.32.14.16.7.42 2.17.27 1.46.44 2.18.2.86.49.67.36-.22 1.07-.73.72-.51 1.082-.74.223-.14.284.12.096.41.23 1.24.14.84.23 1.24.1.42.297 1.22.194.8.292 1.22.09.37-.21.56-.204.13-.69.41-.49.27-.7.4l-.77.48q-.15.1.03.87l.29 1.24q.21.84.3 1.24.34 1.47.67 1.91.45.58 1.265.07.256-.16.683-.65.43-.51.625-.63.214-.13.304.25z" />
-      </g>
-    </g>
-  </defs>
-  <g id="rootGroup">
-    <g name="0 background image">
-      <rect fill="url(#backgroundGradient)" x="0" y="0" width="100%" height="100%"></rect>
-    </g>
-    <g name="1 background text image">
-      <use x="22.5" y="-971.672" xlink:href="#b" />
-      <use x="22.5" y="-871.672" xlink:href="#b" />
-      <use x="22.5" y="-771.672" xlink:href="#b" />
-      <use x="22.5" y="-671.672" xlink:href="#b" />
-      <use x="22.5" y="-571.672" xlink:href="#b" />
-      <use x="122.5" y="-971.672" xlink:href="#b" />
-      <use x="122.5" y="-871.672" xlink:href="#b" />
-      <use x="122.5" y="-771.672" xlink:href="#b" />
-      <use x="122.5" y="-671.672" xlink:href="#b" />
-      <use x="122.5" y="-571.672" xlink:href="#b" />
-      <use x="222.5" y="-971.672" xlink:href="#b" />
-      <use x="222.5" y="-871.672" xlink:href="#b" />
-      <use x="222.5" y="-771.672" xlink:href="#b" />
-      <use x="222.5" y="-671.672" xlink:href="#b" />
-      <use x="222.5" y="-571.672" xlink:href="#b" />
-      <use x="322.5" y="-971.672" xlink:href="#b" />
-      <use x="322.5" y="-871.672" xlink:href="#b" />
-      <use x="322.5" y="-771.672" xlink:href="#b" />
-      <use x="322.5" y="-671.672" xlink:href="#b" />
-      <use x="322.5" y="-571.672" xlink:href="#b" />
-      <use x="422.5" y="-971.672" xlink:href="#b" />
-      <use x="422.5" y="-871.672" xlink:href="#b" />
-      <use x="422.5" y="-771.672" xlink:href="#b" />
-      <use x="422.5" y="-671.672" xlink:href="#b" />
-      <use x="422.5" y="-571.672" xlink:href="#b" />
-      <use x="522.5" y="-971.672" xlink:href="#b" />
-      <use x="522.5" y="-871.672" xlink:href="#b" />
-      <use x="522.5" y="-771.672" xlink:href="#b" />
-      <use x="522.5" y="-671.672" xlink:href="#b" />
-      <use x="522.5" y="-571.672" xlink:href="#b" />
-      <use x="622.5" y="-971.672" xlink:href="#b" />
-      <use x="622.5" y="-871.672" xlink:href="#b" />
-      <use x="622.5" y="-771.672" xlink:href="#b" />
-      <use x="622.5" y="-671.672" xlink:href="#b" />
-      <use x="622.5" y="-571.672" xlink:href="#b" />
-      <use x="722.5" y="-971.672" xlink:href="#b" />
-      <use x="722.5" y="-871.672" xlink:href="#b" />
-      <use x="722.5" y="-771.672" xlink:href="#b" />
-      <use x="722.5" y="-671.672" xlink:href="#b" />
-      <use x="722.5" y="-571.672" xlink:href="#b" />
-    </g>
-  </g>
-</svg>
+    <svg id="goldenBoard" width="100%" height="100%" viewBox="0 0 805 500" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <defs id="rootDefs"></defs>
+        <g id="rootGroup"></g>
+    </svg>
     </div>
     
     <script src="board-golden-aspect.js" type="text/javascript"></script>
