--- a/VP/V2/index.html
+++ b/VP/V2/index.html
@@ -18,6 +18,7 @@
         <stop offset="1" stop-color="#852029" />
       </linearGradient>
     </g>
+    <g name="1 background text bh defs"></g>
     <g name="1 background text image defs">
       <g id="backgroundImageTextBitHit">
         <pattern id="aaa" x="0" y="0" height="100" width="100" patternUnits="userSpaceOnUse">
@@ -30,6 +31,7 @@
     <g name="0 background image">
       <rect fill="url(#backgroundGradient)" x="0" y="0" width="100%" height="100%"></rect>
     </g>
+    <g name="1 background text bh"></g>
     <g name="1 background text image">
       <rect fill="url(#aaa)" x="0" y="0" width="100%" height="100%"></rect>
     </g>
@@ -39,11 +41,23 @@
     <div id="center">
 <svg id="goldenBoard" width="100%" height="100%" viewBox="0 0 805 500" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink">
   <defs id="rootDefs">
-    <g name="0 paper image defs"></g>
+    <g name="0 paper image defs">
+      <linearGradient id="goldWaveStops" xmlns="http://www.w3.org/2000/svg">
+        <stop stop-color="#fffec5" offset="0" />
+        <stop stop-color="#bd643d" offset="1" />
+      </linearGradient>
+      <linearGradient id="goldWaveTrim" spreadMethod="reflect" gradientUnits="userSpaceOnUse" x1="20" x2="20" y1="250" y2="375" xlink:href="#goldWaveStops" xmlns="http://www.w3.org/2000/svg"></linearGradient>
+      <linearGradient id="goldWaveBorder" spreadMethod="reflect" gradientUnits="userSpaceOnUse" x1="20" x2="20" y1="250" y2="365" xlink:href="#goldWaveStops" xmlns="http://www.w3.org/2000/svg"></linearGradient>
+    </g>
   </defs>
   <g id="rootGroup">
     <g name="0 paper image">
-      <rect fill="white" x="20" y="20" width="765" height="460"></rect>
+      <rect id="borderOutline" x="20" y="20" width="765" height="460" fill="url(#goldWaveBorder)" xmlns="http://www.w3.org/2000/svg" />
+      <g id="bolderGoldOverlays" xmlns="http://www.w3.org/2000/svg">
+        <rect x="30" y="30" width="5" height="440" fill="url(#goldWaveTrim)"></rect>
+        <rect x="770" y="30" width="5" height="440" fill="url(#goldWaveTrim)"></rect>
+      </g>
+      <rect id="borderInline" x="35" y="30" width="735" height="440" fill="#fff" stroke="black" stroke-width="0.2" xmlns="http://www.w3.org/2000/svg" />
     </g>
   </g>
 </svg>
