--- a/VP/V2/_index.html
+++ b/VP/V2/_index.html
@@ -16,6 +16,7 @@
 <!--##goldenBoard##-->
     </div>
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
     <script src="board-golden-aspect.js" type="text/javascript"></script>
     <script src="app.js" type="text/javascript"></script>
 </body>
