--- a/VP/V2/index.html
+++ b/VP/V2/index.html
@@ -50,21 +50,33 @@
       <linearGradient id="goldWaveBorder" spreadMethod="reflect" gradientUnits="userSpaceOnUse" x1="20" x2="20" y1="250" y2="365" xlink:href="#goldWaveStops" xmlns="http://www.w3.org/2000/svg"></linearGradient>
     </g>
     <g name="1 reelbackgrounds image defs">
-      <g id="fruitPlaceholder" xmlns="http://www.w3.org/2000/svg">
-        <rect x="0" y="0" width="100%" height="100%" fill="#ff4400" fill-opacity="1"></rect>
-      </g>
-      <linearGradient id="reelSeperatorBackground" x1="0" y1="0" x2="50%" y2="0" gradientUnits="objectBoundingBox" spreadMethod="reflect" xmlns="http://www.w3.org/2000/svg">
+      <linearGradient id="reelSeperatorBackground" x1="0" y1="0" x2="50%" y2="0" gradientUnits="objectBoundingBox" spreadMethod="reflect">
         <stop old-stop-color="#e85773" stop-color="#000000" stop-opacity="1" offset="0" />
         <stop stop-color="#ffffff" stop-opacity="0" offset="0.62" />
       </linearGradient>
-      <linearGradient id="reelBackgroundGrad" x1="0" y1="0" x2="50%" y2="0" gradientUnits="objectBoundingBox" spreadMethod="reflect" xmlns="http://www.w3.org/2000/svg">
+      <linearGradient id="reelBackgroundGrad" x1="0" y1="0" x2="50%" y2="0" gradientUnits="objectBoundingBox" spreadMethod="reflect">
         <stop old-stop-color="#e85773" stop-color="#ff0000" stop-opacity="1" offset="0" />
         <stop stop-color="#ffffff" stop-opacity="0" offset="0.62" />
       </linearGradient>
     </g>
     <g name="2 reels image defs">
-      <g id="baseFruit" xmlns="http://www.w3.org/2000/svg">
-        <circle style="fill: inherit;" r="10" />
+      <g id="fruitPlaceholder" class="fruitContainer" xmlns="http://www.w3.org/2000/svg">
+        <rect x="200" y="350" width="300" height="150" fill="#0000ff" fill-opacity="1" />
+      </g>
+      <g id="fruitImage1" class="fruitImage" xmlns="http://www.w3.org/2000/svg">
+        <rect x="250" y="200" width="500" height="300" fill="#00ffff" fill-opacity="1" />
+      </g>
+      <g id="fruitImage2" class="fruitImage" xmlns="http://www.w3.org/2000/svg">
+        <rect x="300" y="250" width="200" height="500" fill="#ff00ff" fill-opacity="1" />
+      </g>
+      <g id="fruitImage3" class="fruitImage" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="500" cy="500" r="100" fill="#0000ff" fill-opacity="1" />
+      </g>
+      <g id="fruitImage4" class="fruitImage" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="500" cy="500" r="300" fill="#00ff00" fill-opacity="1" />
+      </g>
+      <g id="fruitImage5" class="fruitImage" xmlns="http://www.w3.org/2000/svg">
+        <circle cx="500" cy="500" r="200" fill="#000000" fill-opacity="1" />
       </g>
     </g>
   </defs>
@@ -78,13 +90,14 @@
       <rect id="borderInline" x="24.5" y="15" width="760" height="470" fill="#fff" stroke="black" stroke-width="0.2" xmlns="http://www.w3.org/2000/svg" />
     </g>
     <g name="1 reelbackgrounds image">
-      <g id="reelsContainer" xmlns="http://www.w3.org/2000/svg"></g>
+      <g id="reelsContainer" />
     </g>
     <g name="2 reels image"></g>
   </g>
 </svg>
     </div>
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js"></script>
     <script src="board-golden-aspect.js" type="text/javascript"></script>
     <script src="app.js" type="text/javascript"></script>
 </body>
