--- a/VP/V3/_index.html
+++ b/VP/V3/_index.html
@@ -15,9 +15,13 @@
     <div id="center">
         <!--##goldenBoard##-->
     </div>
+    <div id="overlay">
+        <button id="fullscreen">fullscreen</button>
+        <button id="spin">Spin!</button>
+    </div>
 
     <script src="js/bezier.js"></script>
-    <script src="js/json2.js"></script>
+    <script src="js/json2.js"></script> 
 
 
     <script src="js/log.js" type="text/javascript"></script>
@@ -25,8 +29,9 @@
 
     <script src="js\lib\Fruit.js"></script>
     <script src="js\lib\FruitPosition.js"></script>
-    <script src="js\lib\SpinController.js"></script>
     <script src="js\lib\Reel.js"></script>
+    <script src="js\lib\Reel.Spin.js"></script>
+    <script src="js\lib\Reel.DrawLandscape.js"></script>
     <script src="js\lib\ReelsContainer.js"></script>
     
     <script src="js\app.js" type="text/javascript"></script>
